--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@picocss/pico": "^1.5.10",
     "rxjs": "~7.8.0",
+    "sqlite3": "^5.1.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
